--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,13 +3,15 @@
 <head>
     <meta charset="utf-8" />
     <title>Hello</title>
+    <link href="~/css/all.min.css" rel="stylesheet" />
+    <link href="~/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
     World!
     <script src="http://code.jquery.com/jquery-3.4.1.min.js"
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
             crossorigin="anonymous">
-
     </script>
+    <script src="~/js/bootstrap.min.js"></script>
 </body>
 </html>
