--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,7 +7,12 @@
     <link href="~/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
+    Hello <i class="fas fa-home"></i>
     World!
+    <div class="alert alert-primary" role="alert">
+        This is a primary alert—check it out!
+    </div>
+    
     <script src="http://code.jquery.com/jquery-3.4.1.min.js"
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
             crossorigin="anonymous">
