--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,18 +1,26 @@
-﻿<!DOCTYPE html>
+﻿@using Modas.Models
+@model IEnumerable<Event>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Hello</title>
+    <title>MODAS</title>
     <link href="~/css/all.min.css" rel="stylesheet" />
     <link href="~/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
-    Hello <i class="fas fa-home"></i>
-    World!
-    <div class="alert alert-primary" role="alert">
-        This is a primary alert—check it out!
-    </div>
-    
+   
+    <table class="container table table-bordered">
+        <tr><th>Date</th><th>Time</th><th>Location</th></tr>
+        @foreach (var e in Model)
+        {
+            <tr>
+                <td>@String.Format("{0: ddd, MMM dd, yyyy}", e.TimeStamp)</td>
+                <td>@String.Format("{0:hh:mm tt}", e.TimeStamp)</td>
+                <td>@e.Location.Name</td>
+            </tr>
+        }
+    </table>
     <script src="http://code.jquery.com/jquery-3.4.1.min.js"
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
             crossorigin="anonymous">
