--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,7 +1,4 @@
-﻿@using Modas.Models
-@model IEnumerable<Event>
-<!DOCTYPE html>
-<html>
+﻿<html>
 <head>
     <meta charset="utf-8" />
     <title>MODAS</title>
@@ -9,7 +6,7 @@
     <link href="~/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
-   
+
     <table class="container table table-bordered">
         <tr><th>Date</th><th>Time</th><th>Location</th></tr>
         @foreach (var e in Model)
