--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,7 @@
-﻿<html>
+﻿@using Modas.Models.ViewModels
+@model EventsListViewModel
+
+<html>
 <head>
     <meta charset="utf-8" />
     <title>MODAS</title>
@@ -6,18 +9,86 @@
     <link href="~/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
-
     <table class="container table table-bordered">
         <tr><th>Date</th><th>Time</th><th>Location</th></tr>
-        @foreach (var e in Model)
+        @foreach (var e in Model.Events)
         {
             <tr>
                 <td>@String.Format("{0: ddd, MMM dd, yyyy}", e.TimeStamp)</td>
                 <td>@String.Format("{0:hh:mm tt}", e.TimeStamp)</td>
-                <td>@e.Location.Name</td>
+                <td>@e.Location.Name</td>             
             </tr>
         }
     </table>
+    <footer>
+        <nav aria-label="Page navigation">
+            <ul class="pagination justify-content-center">
+                @if ((Model.PagingInfo.CurrentPage == 1))
+                {
+                    <li class="page-item disabled">
+                        <a class="page-link" href="page1" tabindex="-1" aria-label="First">
+                            <span aria-hidden="true">&laquo;</span>
+                            <span class="sr-only">First</span>
+                        </a>
+                    </li>
+                    <li class="page-item disabled">
+                        <a class="page-link" href="page@(Model.PagingInfo.CurrentPage-1)" tabindex="-1" aria-label="Previous">
+                            <span aria-hidden="true">&lt;</span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                    </li>
+                }
+                else
+                {
+                    <li class="page-item">
+                        <a class="page-link" href="page1" aria-label="First">
+                            <span aria-hidden="true">&laquo;</span>
+                            <span class="sr-only">First</span>
+                        </a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link" href="page@(Model.PagingInfo.CurrentPage-1)" aria-label="Previous">
+                            <span aria-hidden="true">&lt;</span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                    </li>
+                }
+                <li class="page-item disabled">
+                    <div class="page-link"> @(((Model.PagingInfo.CurrentPage - 1) * 10) + 1)-@(Model.PagingInfo.CurrentPage * Model.PagingInfo.ItemsPerPage)  of  @Model.PagingInfo.TotalItems</div>
+                </li>
+                @if ((Model.PagingInfo.CurrentPage == Model.PagingInfo.TotalPages))
+                {
+                    <li class="page-item disabled">
+                        <a class="page-link" href="page@(Model.PagingInfo.CurrentPage+1)" tabindex="-1" aria-label="Next">
+                            <span aria-hidden="true">&gt;</span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </li>
+                    <li class="page-item disabled">
+                        <a class="page-link" href="page@(Model.PagingInfo.TotalPages)" tabindex="-1" aria-label="Last">
+                            <span aria-hidden="true">&raquo;</span>
+                            <span class="sr-only">Last</span>
+                        </a>
+                    </li>
+                }
+                else
+                {
+                    <li class="page-item">
+                        <a class="page-link" href="page@(Model.PagingInfo.CurrentPage+1)" aria-label="Next">
+                            <span aria-hidden="true">&gt;</span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link" href="page@(Model.PagingInfo.TotalPages)" aria-label="Last">
+                            <span aria-hidden="true">&raquo;</span>
+                            <span class="sr-only">Last</span>
+                        </a>
+                    </li>
+                }
+            </ul>
+        </nav>
+    </footer>
     <script src="http://code.jquery.com/jquery-3.4.1.min.js"
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
             crossorigin="anonymous">
