--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,98 +1,85 @@
-﻿@using Modas.Models.ViewModels
-@model EventsListViewModel
-
+﻿@using Modas.Models
+@using Modas.Models.ViewModels
+@model EventListViewModel
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <title>MODAS</title>
     <link href="~/css/all.min.css" rel="stylesheet" />
     <link href="~/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/css/client.css" rel="stylesheet" />
 </head>
 <body>
-    <table class="container table table-bordered">
-        <tr><th>Date</th><th>Time</th><th>Location</th></tr>
-        @foreach (var e in Model.Events)
-        {
-            <tr>
-                <td>@String.Format("{0: ddd, MMM dd, yyyy}", e.TimeStamp)</td>
-                <td>@String.Format("{0:hh:mm tt}", e.TimeStamp)</td>
-                <td>@e.Location.Name</td>             
-            </tr>
-        }
-    </table>
-    <footer>
-        <nav aria-label="Page navigation">
-            <ul class="pagination justify-content-center">
-                @if ((Model.PagingInfo.CurrentPage == 1))
+
+    <div class="container">
+        <table class="table table-sm table-striped table-shadow">
+            <thead class="bg-success text-white">
+                <tr><th class="text-center">Flag</th><th>Date</th><th>Time</th><th>Location</th></tr>
+            </thead>
+            <tbody>
+                @foreach (var e in Model.Events)
                 {
-                    <li class="page-item disabled">
-                        <a class="page-link" href="page1" tabindex="-1" aria-label="First">
-                            <span aria-hidden="true">&laquo;</span>
-                            <span class="sr-only">First</span>
-                        </a>
-                    </li>
-                    <li class="page-item disabled">
-                        <a class="page-link" href="page@(Model.PagingInfo.CurrentPage-1)" tabindex="-1" aria-label="Previous">
-                            <span aria-hidden="true">&lt;</span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                    </li>
+                <tr>
+                    <td class="text-center">
+                        @if (e.Flagged)
+                            {<i class="fas fa-flag"></i>}
+                        else
+                            {<i class="far fa-flag"></i>}
+                    </td>
+                    <td>@String.Format("{0: ddd, MMM dd, yyyy}", e.TimeStamp)</td>
+                    <td>@String.Format("{0:hh:mm tt}", e.TimeStamp)</td>
+                    <td>@e.Location.Name</td>
+                </tr>
                 }
-                else
-                {
-                    <li class="page-item">
-                        <a class="page-link" href="page1" aria-label="First">
-                            <span aria-hidden="true">&laquo;</span>
-                            <span class="sr-only">First</span>
-                        </a>
-                    </li>
-                    <li class="page-item">
-                        <a class="page-link" href="page@(Model.PagingInfo.CurrentPage-1)" aria-label="Previous">
-                            <span aria-hidden="true">&lt;</span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                    </li>
-                }
-                <li class="page-item disabled">
-                    <div class="page-link"> @(((Model.PagingInfo.CurrentPage - 1) * 10) + 1)-@(Model.PagingInfo.CurrentPage * Model.PagingInfo.ItemsPerPage)  of  @Model.PagingInfo.TotalItems</div>
-                </li>
-                @if ((Model.PagingInfo.CurrentPage == Model.PagingInfo.TotalPages))
-                {
-                    <li class="page-item disabled">
-                        <a class="page-link" href="page@(Model.PagingInfo.CurrentPage+1)" tabindex="-1" aria-label="Next">
-                            <span aria-hidden="true">&gt;</span>
-                            <span class="sr-only">Next</span>
-                        </a>
-                    </li>
-                    <li class="page-item disabled">
-                        <a class="page-link" href="page@(Model.PagingInfo.TotalPages)" tabindex="-1" aria-label="Last">
-                            <span aria-hidden="true">&raquo;</span>
-                            <span class="sr-only">Last</span>
-                        </a>
-                    </li>
-                }
-                else
-                {
-                    <li class="page-item">
-                        <a class="page-link" href="page@(Model.PagingInfo.CurrentPage+1)" aria-label="Next">
-                            <span aria-hidden="true">&gt;</span>
-                            <span class="sr-only">Next</span>
-                        </a>
-                    </li>
-                    <li class="page-item">
-                        <a class="page-link" href="page@(Model.PagingInfo.TotalPages)" aria-label="Last">
-                            <span aria-hidden="true">&raquo;</span>
-                            <span class="sr-only">Last</span>
-                        </a>
-                    </li>
-                }
-            </ul>
-        </nav>
-    </footer>
-    <script src="http://code.jquery.com/jquery-3.4.1.min.js"
-            integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-            crossorigin="anonymous">
-    </script>
+            </tbody>
+        </table>
+        <div class="row mb-3">
+            <div class="col">
+                <button disabled id="first" class="btn btn-outline-secondary" type="button" data-page="1"><i class="fas fa-angle-double-left"></i><span class="d-none d-md-inline"> First</span></button>
+                <button disabled id="prev" class="btn btn-outline-secondary" type="button" data-page="@(Model.PagingInfo.PreviousPage)"><i class="fas fa-angle-left"></i><span class="d-none d-md-inline"> Prev</span></button>
+            </div>
+            <div class="col text-center text-secondary">
+                <span id="start">@(Model.PagingInfo.RangeStart)</span>-<span id="end">@(Model.PagingInfo.RangeEnd)</span>
+                of
+                <span id="total">@(Model.PagingInfo.TotalItems)</span>
+            </div>
+            <div class="col text-right">
+                <button disabled id="next" class="btn btn-outline-secondary" type="button" data-page="@(Model.PagingInfo.NextPage)"><span class="d-none d-md-inline">Next </span><i class="fas fa-angle-right"></i></button>
+                <button disabled id="last" class="btn btn-outline-secondary" data-page="@(Model.PagingInfo.TotalPages)"><span class="d-none d-md-inline">Last </span><i class="fas fa-angle-double-right"></i></button>
+            </div>
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+            crossorigin="anonymous"></script>
     <script src="~/js/bootstrap.min.js"></script>
+    <script>
+        $(function () {
+            initButtons();
+
+            // event listeners for first/next/prev/last buttons
+            $('#next, #prev, #first, #last').on('click', function () {
+                location.href = "page" + $(this).data('page');
+            });
+
+            // Event listener for clicking user flag
+            $('.fa-flag').on('click', function (e) {
+                if ($(this).hasClass('far')) {
+                    $(this).removeClass('far').addClass('fas');
+                } else if ($(this).hasClass('fas')) {
+                    $(this).removeClass('fas').addClass('far');
+                }
+            });
+
+
+            function initButtons() {
+                // disable prev/first buttons when on first page
+                $('#first, #prev').prop('disabled', $('#start').html() == "1");
+                // disable next/last buttons when on last page
+                $('#last, #next').prop('disabled', $('#end').html() == $('#total').html());
+            }
+        });
+    </script>
 </body>
 </html>
